Add reloader for edge

--- a/relx.config.edge
+++ b/relx.config.edge
@@ -29,6 +29,7 @@
   {emqx_stomp, load},
   {emqx_management, load},
   {emqx_retainer, load},
+  {emqx_reloader, load},
   {emqx_delayed_publish, load},
   {emqx_web_hook, load},
   {emqx_auth_clientid, load},
