--- a/relx.config.edge
+++ b/relx.config.edge
@@ -1,6 +1,6 @@
 %% -*- mode: Erlang; fill-column: 80; comment-column: 75; -*-
 
-{release, {emqx, "3.0.0"}, [
+{release, {emqx, "3.1"}, [
   kernel,
   sasl,
   crypto,
@@ -36,7 +36,8 @@
   {emqx_auth_username, load},
   {emqx_auth_http, load},
   {emqx_auth_mysql, load},
-  {emqx_auth_jwt, load}
+  {emqx_auth_jwt, load},
+  {emqx_psk_file, load}
 ]}.
 
 {include_src, false}.
@@ -68,11 +69,13 @@
     {template, "rel/conf/vm.args", "etc/vm.args"},
     {template, "rel/conf/ssl_dist.conf", "etc/ssl_dist.conf"},
     {template, "rel/conf/plugins/emqx_coap.conf", "etc/plugins/emqx_coap.conf"},
+    {template, "rel/conf/plugins/emqx_psk_file.conf", "etc/plugins/emqx_psk_file.conf"},
     {copy, "rel/conf/acl.conf", "etc/acl.conf"},
     {copy, "data/loaded_plugins", "data/loaded_plugins"},
     {copy, "bin/nodetool", "bin/nodetool"},
     {copy, "rel/schema", "releases/\{\{rel_vsn\}\}/"},
     {copy, "bin/install_upgrade_escript", "bin/install_upgrade_escript"},
-    {copy, "deps/cuttlefish/cuttlefish", "bin/"}
+    {copy, "deps/cuttlefish/cuttlefish", "bin/"},
+    {copy, "deps/emqx_psk_file/etc/psk.txt", "etc/psk.txt"}
 ]}.
 
