Add emqx_storm in relx.config and data/loaded_plugins.edge Prior to this change,
This change

--- a/relx.config.edge
+++ b/relx.config.edge
@@ -28,6 +28,7 @@
   {emqx_sn, load},
   {emqx_coap, load},
   {emqx_recon, load},
+  {emqx_storm, load},
   {emqx_stomp, load},
   {emqx_management, load},
   {emqx_retainer, load},
