Fix edge compile fail

--- a/relx.config.edge
+++ b/relx.config.edge
@@ -20,6 +20,8 @@
   cowboy,
   pbkdf2,
   bcrypt,
+  sqlparse,
+  jpparse,
   emqx,
   {mnesia, load},
   {ekka, load},
@@ -29,6 +31,7 @@
   {emqx_stomp, load},
   {emqx_management, load},
   {emqx_retainer, load},
+  {emqx_rule_engine, load},
   {emqx_reloader, load},
   {emqx_delayed_publish, load},
   {emqx_web_hook, load},
