--- a/data/loaded_plugins.tmpl
+++ b/data/loaded_plugins.tmpl
@@ -3,3 +3,4 @@
 {emqx_retainer, true}.
 {emqx_dashboard, {{enable_plugin_emqx_dashboard}}}.
 {emqx_rule_engine, {{enable_plugin_emqx_rule_engine}}}.
+{emqx_cube, {{enable_plugin_emqx_cube}}}.
