--- a/data/loaded_plugins.tmpl
+++ b/data/loaded_plugins.tmpl
@@ -3,4 +3,5 @@
 {emqx_retainer, true}.
 {emqx_dashboard, {{enable_plugin_emqx_dashboard}}}.
 {emqx_rule_engine, {{enable_plugin_emqx_rule_engine}}}.
+{emqx_bridge_mqtt, {{enable_plugin_emqx_bridge_mqtt}}}.
 {emqx_cube, {{enable_plugin_emqx_cube}}}.
