--- a/data/loaded_plugins.tmpl
+++ b/data/loaded_plugins.tmpl
@@ -1,6 +1,6 @@
 {emqx_management, true}.
 {emqx_recon, true}.
 {emqx_retainer, true}.
-{emqx_dashboard, {{enable_plugin_emqx_dashboard}}}.
+{emqx_dashboard, true}.
 {emqx_rule_engine, {{enable_plugin_emqx_rule_engine}}}.
 {emqx_bridge_mqtt, {{enable_plugin_emqx_bridge_mqtt}}}.
