--- a/data/loaded_modules.tmpl
+++ b/data/loaded_modules.tmpl
@@ -3,4 +3,4 @@
 {emqx_mod_delayed, false}.
 {emqx_mod_rewrite, false}.
 {emqx_mod_subscription, false}.
-{emqx_mod_topic_metrics false}.
+{emqx_mod_topic_metrics, false}.
