--- a/data/loaded_modules.tmpl
+++ b/data/loaded_modules.tmpl
@@ -1,2 +1,6 @@
 {emqx_mod_acl_internal, true}.
 {emqx_mod_presence, true}.
+{emqx_mod_delayed, false}.
+{emqx_mod_rewrite, false}.
+{emqx_mod_subscription, false}.
+{emqx_mod_topic_metrics, false}.
